updated mappers and added custom exceptions